hphp/hack/test/typecheck/hard_ban/as.php
<?hh

function f(mixed $m): void {
  /* HH_FIXME[4195] */
  $m as vec<int>;
}
